Allow answers to overflow the answer info-box for the rare cases that answers are super-long. Fixes issue 1938
--HG--
extra : convert_revision : svn%3A60972f9f-2242-074b-9109-3933092f38a4/trunk%40782

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -660,6 +660,9 @@ ul.ui-autocomplete .ui-menu-item a span.playlist {
 
 /* Individual Exercise Styles */
 
+#container.single-exercise {
+    overflow: visible;
+}
 #container #dashboard-header.single-exercise {
     border: 1px solid #ccc;
     border-top: none;
